@@ -3,7 +3,7 @@
     <partition>/machine</partition>
   </resource>
   <uuid>{{ instance_uuid }}</uuid>
-  <currentMemory unit="KiB">{{ memory_minsize }}</currentMemory>
+  <currentMemory unit="KiB">{{ memory_size }}</currentMemory>
   <on_poweroff>destroy</on_poweroff>
   <devices>
     <console type="pty" tty="/dev/pts/1">
@@ -56,7 +56,7 @@
     <acpi/>
     <apic/>
   </features>
-  <memory unit="KiB">{{ memory_size }}</memory>
+  <memory unit="KiB">{{ memory_maxsize }}</memory>
   <os>
     <type machine="pc" arch="x86_64">hvm</type>
     <boot dev="hd"/>
