@@ -35,7 +35,7 @@ class TestDomainTasks(LibVirtCommonTest):
                 'libvirt_auth': {'a': 'c'}
             },
             runtime_properties=DirtyTrackingDict({
-                'params': {'c': "d", 'e': 'g', 'memory_size': 1024},
+                'params': {'c': "d", 'e': 'g'},
                 'libvirt_auth': {'a': 'd'}
             })
         )
@@ -47,10 +47,11 @@ class TestDomainTasks(LibVirtCommonTest):
         _ctx = self._create_ctx()
         self._check_no_such_object_domain(
             "cloudify_libvirt.domain_tasks.libvirt.open",
-            domain_tasks.configure, [], {'ctx': _ctx, 'params': {
+            domain_tasks.configure, [], {
+                'ctx': _ctx,
                 "resource_id": 'resource',
-                "use_external_resource": True,
-            }}, 'resource')
+                "use_external_resource": True
+            }, 'resource')
 
     def test_reuse_domain_create_exist(self):
         # check that we can use domain
@@ -65,9 +66,8 @@ class TestDomainTasks(LibVirtCommonTest):
             "cloudify_libvirt.domain_tasks.libvirt.open",
             mock.Mock(return_value=connect)
         ):
-            domain_tasks.configure(ctx=_ctx, params={
-                    "resource_id": 'resource',
-                    "use_external_resource": True})
+            domain_tasks.configure(ctx=_ctx, resource_id='resource',
+                                   use_external_resource=True)
         connect.lookupByName.assert_called_with('resource')
         self.assertEqual(
             _ctx.instance.runtime_properties['resource_id'], 'resource'
@@ -86,7 +86,7 @@ class TestDomainTasks(LibVirtCommonTest):
         self.assertEqual(_ctx.instance.runtime_properties, {
             'libvirt_auth': {'w': 'x'},
             'params': {
-                'a': 'b', 'c': 'd', 'e': 'g', 'z': 'y', 'memory_size': 1024
+                'a': 'b', 'c': 'd', 'e': 'g', 'z': 'y'
             }
         })
 
@@ -114,17 +114,61 @@ class TestDomainTasks(LibVirtCommonTest):
 
         connect = self._create_fake_connection()
         connect.defineXML = mock.Mock(return_value=domain)
+
+        # without params
         _ctx.instance.runtime_properties['params'] = {}
         _ctx.node.properties['params'] = {}
         with mock.patch(
             "cloudify_libvirt.domain_tasks.libvirt.open",
             mock.Mock(return_value=connect)
         ):
-            domain_tasks.configure(ctx=_ctx, domain_file="domain_file")
+            domain_tasks.configure(ctx=_ctx,
+                                   domain_file="domain_file")
         connect.defineXML.assert_called_with('<somexml/>')
         self.assertEqual(
             _ctx.instance.runtime_properties['resource_id'], "domain_name"
         )
+        # with params from inputs
+        _ctx.instance.runtime_properties['params'] = {}
+        _ctx.node.properties['params'] = {}
+        with mock.patch(
+            "cloudify_libvirt.domain_tasks.libvirt.open",
+            mock.Mock(return_value=connect)
+        ):
+            domain_tasks.configure(ctx=_ctx,
+                                   domain_file="domain_file",
+                                   params={"memory_size": 1024})
+        connect.defineXML.assert_called_with('<somexml/>')
+        self.assertEqual(
+            _ctx.instance.runtime_properties['params']['memory_maxsize'],
+            2048)
+        self.assertEqual(
+            _ctx.instance.runtime_properties['params']['memory_size'],
+            1024)
+
+
+    def test_update(self):
+        self._test_no_resource_id(domain_tasks.update)
+        self._test_check_correct_connect_action(domain_tasks.update)
+        self._test_check_correct_connect_no_object(domain_tasks.update)
+        # check memory
+        self._test_action_states(
+            domain_tasks.update,
+            [libvirt.VIR_DOMAIN_RUNNING],
+            'Can not change memory amount.',
+            params_update={'memory_size': 1024})
+        # check max memory
+        self._test_action_states(
+            domain_tasks.update,
+            [libvirt.VIR_DOMAIN_RUNNING_UNKNOWN],
+            'Can not change max memory amount.',
+            params_update={'memory_maxsize': 1024})
+        # check cpu
+        self._test_action_states(
+            domain_tasks.update,
+            [libvirt.VIR_DOMAIN_RUNNING_UNKNOWN],
+            'Can not change cpu count.',
+            params_update={'vcpu': 1024})
 
     def test_reboot(self):
         self._test_no_resource_id(domain_tasks.reboot)
@@ -378,10 +422,12 @@ class TestDomainTasks(LibVirtCommonTest):
         )
 
     def _test_action_states(self, func, states, error_text,
-                            error_check_ip=None):
+                            error_check_ip=None, params_update=None):
         _ctx = self._create_ctx()
         _ctx.instance.runtime_properties['resource_id'] = 'check'
         _ctx.instance.runtime_properties['params']['wait_for_ip'] = True
+        if params_update:
+            _ctx.instance.runtime_properties['params'].update(params_update)
         fake_states = [state for state in states]
 
         def _fake_state():
@@ -401,6 +447,9 @@ class TestDomainTasks(LibVirtCommonTest):
         domain.resume = mock.Mock(return_value=-1)
         domain.suspend = mock.Mock(return_value=-1)
         domain.reboot = mock.Mock(return_value=-1)
+        domain.setMemory = mock.Mock(return_value=-1)
+        domain.setMaxMemory = mock.Mock(return_value=-1)
+        domain.setVcpus = mock.Mock(return_value=-1)
 
         with mock.patch(
             "cloudify_libvirt.domain_tasks.libvirt.open",
@@ -419,6 +468,9 @@ class TestDomainTasks(LibVirtCommonTest):
         domain.resume = mock.Mock(return_value=0)
         domain.suspend = mock.Mock(return_value=0)
         domain.reboot = mock.Mock(return_value=0)
+        domain.setMemory = mock.Mock(return_value=0)
+        domain.setMaxMemory = mock.Mock(return_value=0)
+        domain.setVcpus = mock.Mock(return_value=0)
         fake_states = [state for state in states]
 
         def _fake_state():
